--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -129,7 +129,8 @@ $mainColor: #000; // Колір шрифту за замовчуванням
 @import "footer";
 @import "mobile-menu";
 @import "hero";
-@import "who-works-with-us"
+@import "who-works-with-us";
+@import "how-we-help";
 
 // Підключення стилів окремих сторінок
 // @import "home";
