--- a/src/scss/who-works-with-us.scss
+++ b/src/scss/who-works-with-us.scss
@@ -36,9 +36,25 @@ background-color: rgb(242, 249, 254);
 .item-4 {
 background-color: rgb(254, 250, 236);
 }
+.who-works__img {  
+display: block;
+         
+margin-bottom: 20px;
+@include font(700, 50px, 34px);
+
+@media screen and (min-width: 624px) {
+font-size: 70px;}
+
+}
 
 .who-works__item-title {
     margin-bottom: 20px;
     @include font(700, 24px, 34px);
 
+}
+
+.who-works__item-text{
+    @media screen and (min-width: 624px) {
+font-size: 18px;
+}
 }
