--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -131,6 +131,9 @@ $mainColor: #000; // Колір шрифту за замовчуванням
 @import "hero";
 @import "who-works-with-us";
 @import "how-we-help";
+@import "link-types";
+@import "countries";
+@import "packages";
 
 // Підключення стилів окремих сторінок
 // @import "home";
