--- a/src/scss/countries.scss
+++ b/src/scss/countries.scss
@@ -6,6 +6,10 @@
     @media screen and (min-width: 524px) {
         flex-direction: row-reverse;
     }
+    @media screen and (min-width: 842px) {
+        min-width: 950px;
+    max-width: 950px;
+    }
 }
 
 .countries__img-side {
