--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -134,6 +134,9 @@ $mainColor: #000; // Колір шрифту за замовчуванням
 @import "link-types";
 @import "countries";
 @import "packages";
+@import "next-step";
+@import "contact-us";
+
 
 // Підключення стилів окремих сторінок
 // @import "home";
