--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -16,6 +16,10 @@ border-bottom: 1px solid #ebebeb;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media screen and (min-width: 1280px) {
+    max-width: 1280px;
+  }
 }
 
 .header__logo-link {
