--- a/src/scss/packages.scss
+++ b/src/scss/packages.scss
@@ -1,10 +1,11 @@
 .packages__list {
-    
+//     display: flex;
+// flex-direction: column;
+// align-items: center;
 
     margin-bottom: 32px;
 
     @media screen and (min-width: 524px) {
-            // grid-template-columns: repeat(2, 1fr);
             display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -15,8 +16,7 @@
     }
 
     @media screen and (min-width: 842px) {
-                    // grid-template-columns: repeat(3, 1fr);
-
+// justify-content: space-between;
     }
 }
 
@@ -26,8 +26,9 @@ flex-direction: column;
 // justify-content: space-between;
 align-items: center;
 
-
+max-width: 342px;
 padding: 32px;
+margin: 0 auto;
 
 &:not(:last-child) {
     margin-bottom: 32px;
@@ -49,6 +50,7 @@ box-shadow: rgba(0, 0, 0, 0.176) 0px 16px 48px 0px;
 }
 
 @media screen and (min-width: 524px) {
+margin: 0;
 
 margin-top: 32px;
 margin-left: 32px;
@@ -59,6 +61,9 @@ flex-basis: calc((100% - 64px) / 2);
 }
 
 @media screen and (min-width: 842px) {
+
+    // max-width: 380px;
+
     flex-basis: calc((100% - 96px) / 3);
 }
 
@@ -120,12 +125,26 @@ margin-bottom: 20px;
     // width: 0%;
     max-width: 200px;
     background-color: #25ae60;
+
+&:hover,
+&:focus {
+transition: .25s;
+background-color: #25ae60;
+box-shadow: rgba(0, 0, 0, 0.176) 0px 16px 48px 0px;
+}
 }
 
 .packages__button-active {
         max-width: 200px;
 
     background-color: #f49a40;
+
+    &:hover,
+&:focus {
+transition: .25s;
+background-color: #f49a40;
+box-shadow: rgba(0, 0, 0, 0.176) 0px 16px 48px 0px;
+}
 }
 
 .packages__item-active {
@@ -135,11 +154,22 @@ margin-bottom: 20px;
 }
 
 .packages__contact-text-wrapper {
+    // margin: 0 auto;
+     @media screen and (min-width: 524px) {
+         text-align: center;
+     }
+
+      @media screen and (min-width: 893px) {
+font-size: 22px;
+    }
 
 }
 
 .packages__contact-text {
     display: inline;
+    // @media screen and (min-width: 524px)  {
+    //     margin-right: 15px;
+    // }
 }
 
 .packages__contact-link {
